--- a/resources/assets/scss/components/_chapter-elements.scss
+++ b/resources/assets/scss/components/_chapter-elements.scss
@@ -178,6 +178,9 @@
             }
             font-weight: 600;
         }
+        .btn-group {
+            margin-top: 25px;
+        }
     }
 }
 
