--- a/resources/assets/scss/components/_header.scss
+++ b/resources/assets/scss/components/_header.scss
@@ -96,6 +96,11 @@ header {
                         font-size: 1em;
                         font-weight: 500;
                     }
+                    &.active {
+                        a {
+                            color: $color-secondary !important;
+                        }
+                    }
                     .dropdown-menu {
                         background: transparent;
                         padding: 0;
