--- a/resources/assets/scss/pages/_pages-section.scss
+++ b/resources/assets/scss/pages/_pages-section.scss
@@ -95,6 +95,11 @@
             }
         }
     }
+    .chapter-benefits {
+        ul.bullet-style {
+            margin-bottom: 0;
+        }
+    }
 }
 
 .page {
@@ -112,6 +117,20 @@
     &--areaa-benefit {
         .side-tab-equal__tab ul li a {
             pointer-events: none !important;
+        }
+    }
+    &--login {
+        .login-section__item {
+            background: transparent;
+            min-height: 700px;
+        }
+        .login-section {
+            margin: 0;
+            .container-max {
+                max-width: 100%;
+                border-radius: 0 !important;
+                padding: 0;
+            }
         }
     }
 }
