--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18584,16 +18584,27 @@ header .contact-details-wrap .info a i.ic-chapter {
   width: 100%;
   min-width: 1920px;
   height: 100%;
-  min-height: 645px;
+  min-height: 100%;
   position: absolute;
   top: 0;
   right: 0;
   z-index: 2;
   background: url("../images/banner/hp-banner-overlay.png") no-repeat;
+  background-size: 100% 100% !important;
+}
+.banner__image-slide .item-right:after {
+  content: "";
+  width: 100%;
+  height: 35px;
+  background: #fff;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
 }
 .banner__image-slide .banner-img-holder {
   display: block;
-  min-height: 633px;
+  min-height: 600px;
 }
 .banner__thumb-slide {
   position: absolute;
@@ -18703,6 +18714,9 @@ header .contact-details-wrap .info a i.ic-chapter {
 }
 .banner__chapter .banner-content-desc .btn--primary {
   margin-top: 20px;
+}
+.banner__chapter .banner__image-slide .banner-img-holder {
+  min-height: 500px !important;
 }
 .banner__chapter .banner__image-slide .banner-img-holder:before {
   content: "";
@@ -21202,6 +21216,14 @@ ul.bullet-style li h6 {
 .map-grayscale iframe {
   width: 100%;
   height: 100%;
+  filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
+  /* Firefox 10+ */
+  filter: gray;
+  /* IE6-9 */
+  -webkit-filter: grayscale(99%);
+  /* Chrome 19+ & Safari 6+ */
+  -webkit-backface-visibility: hidden;
+  /* Fix for transition flickering */
 }
 
 .accordion {
@@ -22371,6 +22393,7 @@ section.page--media .search-member-directory {
 }
 .page-chapter--homepage .main-content {
   padding-bottom: 0 !important;
+  padding-top: 0 !important;
 }
 .page-chapter .dashboard-nav {
   margin-bottom: 50px;
@@ -22438,6 +22461,9 @@ section.page--media .search-member-directory {
 }
 .page-chapter .chapter-benefits ul.bullet-style {
   margin-bottom: 0;
+}
+.page-chapter--support .main-content {
+  padding-top: 0;
 }
 
 .page--board .executive-board {
