--- a/resources/assets/scss/components/_banner.scss
+++ b/resources/assets/scss/components/_banner.scss
@@ -163,17 +163,30 @@ $banner-background-color:#000;
                 width: 100%;
                 min-width: 1920px;
                 height: 100%;
-                min-height: 645px;
+                // min-height: 645px;
+                min-height: 100%;
                 position: absolute;
                 top: 0;
                 right: 0;
                 z-index: 2;
                 background: url('../images/banner/hp-banner-overlay.png') no-repeat;
+                background-size: 100% 100% !important;
+            }
+            &:after {
+                content: '';
+                width: 100%;
+                height: 35px;
+                background: #fff;
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                z-index: 1;
             }
         }
         .banner-img-holder {
             display: block;
-            min-height: 633px;
+            // min-height: 633px;
+            min-height: 600px;
         }
     }
     &__thumb-slide {
@@ -293,6 +306,7 @@ $banner-background-color:#000;
         }
         .banner__image-slide {
             .banner-img-holder {
+                min-height: 500px !important;
                 &:before {
                     content: '';
                     width: 100px;
