--- a/resources/assets/scss/components/_mobile-overwrite.scss
+++ b/resources/assets/scss/components/_mobile-overwrite.scss
@@ -100,6 +100,9 @@
         line-height: 60px;
         margin-bottom: 35px;
     }
+    .banner__chapter .banner-content-desc h3 {
+        font-size: 2.7rem !important;
+    }
 }
 
 @media only screen and (max-width:1300px) {
