--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -1869,7 +1869,7 @@ ul.bullet-style {
     .container-max {
         max-width: 100%;
         padding: 0;
-        padding-left: 7%;
+        // padding-left: 7%;
     }
     .masking-background__wrapper:after {
         z-index: 1 !important;
@@ -2588,6 +2588,7 @@ ul.bullet-style {
         .form-group {
             position: relative;
         }
+        .toggle-password-new,
         .toggle-password {
             position: absolute;
             bottom: 15px;
@@ -2599,5 +2600,38 @@ ul.bullet-style {
         margin-bottom: 25px;
         background: #f9f7f7;
         padding: 30px;
+    }
+}
+
+.white-cover {
+    background: url('../images/white-paper.jpg')repeat;
+    position: relative;
+    .container-max {
+        max-width: 1500px;
+    }
+    &:before {
+        width: 100%;
+        height: 11%;
+        background: url('../images/top-white-small.png');
+        background-size: 100% 100% !important;
+        background-position: bottom;
+        background-repeat: no-repeat;
+        position: absolute;
+        content: '';
+        left: 0;
+        top: 0;
+    }
+    &:after {
+        width: 100%;
+        height: 10%;
+        background: url('../images/bottom-white-small.png');
+        background-size: 100% 100% !important;
+        position: absolute;
+        background-repeat: no-repeat;
+        background-position: top;
+        content: '';
+        bottom: 0;
+        left: 0;
+        z-index: 1;
     }
 }
