--- a/resources/assets/scss/pages/_pages-section.scss
+++ b/resources/assets/scss/pages/_pages-section.scss
@@ -39,6 +39,9 @@
                 }
             }
         }
+        .main-content {
+            padding: 0px 0 !important
+        }
     }
     &--resources-american-report {
         main.main-content {
@@ -108,6 +111,9 @@
         .main-content {
             padding-top: 0;
         }
+        .contact-details-content .contact-details {
+            margin-top: 25px;
+        }
     }
 }
 
@@ -147,6 +153,9 @@
         }
         .login-section__left .login-section__form {
             height: auto;
+        }
+        .login-section__left .login-section__form h2 {
+            margin-bottom: 25px !important;
         }
     }
 }
