icons sprite adjustment on css

--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -1251,10 +1251,12 @@ ul.bullet-style {
             &.loc {
                 display: inline-block;
                 vertical-align: middle;
-                width: 25px;
+                // width: 25px;
+                width: 26px;
                 height: 37px;
                 background: url("../images/sprite.png") no-repeat;
-                background-position: -97px -8px;
+                // background-position: -97px -8px;
+                background-position: -95px -8px;
             }
             &.tel {
                 display: inline-block;
